unpackaged/main/default/objects/project_cloud__Expense2__c/project_cloud__Expense2__c.object-meta.xml
<CustomObject>
    <description>Object for capturing expense information related to a project.</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>