unpackaged/main/default/objects/project_cloud__Expense2__c/fields/project_cloud__Amount__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Amount__c</fullName>
    <inlineHelpText>The amount of the expense.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>