unpackaged/main/default/objects/project_cloud__Expense2__c/fields/project_cloud__Approved__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This check box will indicate if the Expense record has been approved.</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>