unpackaged/main/default/objects/project_cloud__Expense2__c/fields/project_cloud__Cost_Area__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Cost_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Defines the sub-area that this expense is related to.</inlineHelpText>
    <label>Cost Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>project_cloud__Area__c.project_cloud__Area__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>project_cloud__Area__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Cost</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Area__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>