unpackaged/main/default/objects/project_cloud__Expense2__c/fields/project_cloud__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project Task that this expense is related to.</inlineHelpText>
    <label>Project Task</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>Project Task does not belong to related Project</errorMessage>
        <filterItems>
            <field>project_cloud__Project_Task__c.project_cloud__Project_Phase__r.project_cloud__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.project_cloud__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>