unpackaged/main/default/objects/project_cloud__Expense2__c/fields/project_cloud__Rejected__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This check box will indicate if the Expense record has been rejected.</inlineHelpText>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>