unpackaged/main/default/objects/project_cloud__Expense2__c/fields/project_cloud__Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Type__c</fullName>
    <inlineHelpText>This field will allow users to specify if the Expense record is Actual or Budgeted.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
                <default>true</default>
                <label>Actual</label>
            </value>
            <value>
                <fullName>Budgeted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>