unpackaged/main/default/objects/project_cloud__Expense2__c/validationRules/project_cloud__Project_Task_Must_Be_From_Same_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Project_Task_Must_Be_From_Same_Project</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(project_cloud__Project_Task__c)) &amp;&amp; project_cloud__Project__c != project_cloud__Project_Task__r.project_cloud__Project_Phase__r.project_cloud__Project__c</errorConditionFormula>
    <errorDisplayField>project_cloud__Project_Task__c</errorDisplayField>
    <errorMessage>The related Project Task must come from the related Project</errorMessage>
</ValidationRule>